[package]
name = "snake"
version = "0.1.0"
authors = ["Jaeseok Choi <cam_choi9@gwu.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.3"
piston_window = "0.109.0" 
find_folder = "0.3.0"
gfx = "0.18.2"
piston2d-graphics = "0.36.0"
piston2d-opengl_graphics = "0.72.0"
pistoncore-glutin_window = "0.64.0"
gfx_glyph = "0.17.0"